--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ input[type="number"] {
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #777;
     border-radius: 4px;
     font-size: 1em;
     background-color: #b3b3b3;
